--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
     
     <!-- Indice dans le code source -->
     <!-- Vérifiez les logs système -->
+    <script>
+if (window.location.pathname.includes("/secret")) {
+    document.body.innerHTML = `
+        <h1>CODE TROUVÉ !</h1>
+        <p>7-42-3301</p>
+    `;
+}
+</script>
 </body>
 </html>
